2010-01-28  Hayato Ito  <hayato@chromium.org>

Reviewed by Darin Adler.

        Change CSS 'page-break-inside' property from inherited one to non-inherited one because CSS specification defines so.

        Note: Currently, the 'page-break-inside' property is used only when parsing the CSS. That property is not used when rendering.

        https://bugs.webkit.org/show_bug.cgi?id=34195

        * fast/css/getComputedStyle/computed-style-page-break-inside-expected.txt: Added.
        * fast/css/getComputedStyle/computed-style-page-break-inside.html: Added.
        * fast/css/getComputedStyle/script-tests/computed-style-page-break-inside.js: Added.
2010-01-28  Hayato Ito  <hayato@chromium.org>

        Reviewed by Darin Adler.

        Change CSS 'page-break-inside' property from inherited one to non-inherited one because CSS specification defines so.

        Note: Currently, the 'page-break-inside' property is used only when parsing the CSS. That property is not used when rendering.

        https://bugs.webkit.org/show_bug.cgi?id=34195

        * rendering/style/RenderStyle.h:
        (WebCore::InheritedFlags::NonInheritedFlags::operator==):
        (WebCore::InheritedFlags::setBitDefaults):
        (WebCore::InheritedFlags::pageBreakInside):
        (WebCore::InheritedFlags::setPageBreakInside):
        * rendering/style/StyleInheritedData.cpp:
        (WebCore::StyleInheritedData::StyleInheritedData):
        (WebCore::StyleInheritedData::operator==):
        * rendering/style/StyleInheritedData.h:

Canonical link: https://commits.webkit.org/45412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54045 268f45cc-cd09-0410-ab3c-d52691b4dbfc