WebCore/rendering/style/StyleInheritedData.h
@@ -68,7 +68,6 @@ public:
     // Paged media properties.
     short widows;
     short orphans;
-    unsigned page_break_inside : 2; // EPageBreak
     
 private:
     StyleInheritedData();
